# synacor-c

./: .gitignore  CMakeLists.txt
src/: cpu.c  cpu.h  main.c  main.h  stack.h  unitTests.c  unitTests.h
